--- a/readme.adoc
+++ b/readme.adoc
@@ -51,18 +51,16 @@ git fetch origin
 git checkout -b dev origin/dev
 ----
 +
-. Create new feature branch; the name should be composed like follows:
-+
-    yourname/place-of-fixing/issue-tracker-number/short-description
-+
-which would translate to:
-+
-    Mauville/github/GH-20/readme-init
+. Create new feature branch
 +
 [source, powershell]
 ----
 git checkout -b Mauville/github/GH-20/readme-init
 ----
++
+The branch name should be composed like follows:
++
+    yourname/place-of-fixing/issue-tracker-number/short-description
 +
 . Begin making changes.  Once finished, add, commit and push changes.
 +
