Solve GH-19, Correct Readme

--- a/readme.adoc
+++ b/readme.adoc
@@ -55,12 +55,12 @@ git checkout -b dev origin/dev
 +
 [source, powershell]
 ----
-git checkout -b Mauville/github/GH-20/readme-init
+git checkout -b Mauville/github
 ----
 +
 The branch name should be composed like follows:
 +
-    yourname/place-of-fixing/issue-tracker-number/short-description
+    yourname/main-place-of-fixing
 +
 . Begin making changes.  Once finished, add, commit and push changes.
 +
